--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -3219,19 +3219,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-    --cz-btn-color: #fe696a;
-    --cz-btn-border-color: #fe696a;
+    --cz-btn-color: #2d2224;
+    --cz-btn-border-color: #d8ac63;
     --cz-btn-hover-color: #000;
-    --cz-btn-hover-bg: #fe696a;
-    --cz-btn-hover-border-color: #fe696a;
+    --cz-btn-hover-bg: #d8ac63;
+    --cz-btn-hover-border-color: #d8ac63;
     --cz-btn-focus-shadow-rgb: 45, 34, 36;
     --cz-btn-active-color: #000;
-    --cz-btn-active-bg: #fe696a;
-    --cz-btn-active-border-color: #fe696a;
+    --cz-btn-active-bg: #d8ac63;
+    --cz-btn-active-border-color: #d8ac63;
     --cz-btn-active-shadow: unset;
-    --cz-btn-disabled-color: #fe696a;
+    --cz-btn-disabled-color: #d8ac63;
     --cz-btn-disabled-bg: transparent;
-    --cz-btn-disabled-border-color: #fe696a;
+    --cz-btn-disabled-border-color: #d8ac63;
     --cz-gradient: none;
 }
 
@@ -17492,7 +17492,7 @@ a.nav-link:hover .media-tab-media {
     transition: width 0.2s ease-in-out, background-color 0.2s ease-in-out;
     border: 0;
     border-radius: 0.15625rem;
-    background-color: #b6bcc5;
+    background-color: #d8ac63;
 }
 .tns-carousel [data-nav]:focus {
     outline: none;
