--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -29,7 +29,7 @@
     --cz-secondary: #f3f5f9;
     --cz-success: #42d697;
     --cz-info: #69b3fe;
-    --cz-warning: #fea569;
+    --cz-warning: #d8ac63;
     --cz-danger: #f34770;
     --cz-light: #fff;
     --cz-dark: #373f50;
@@ -38,7 +38,7 @@
     --cz-secondary-rgb: 243, 245, 249;
     --cz-success-rgb: 66, 214, 151;
     --cz-info-rgb: 105, 179, 254;
-    --cz-warning-rgb: 254, 165, 105;
+    --cz-warning-rgb: 216, 172, 99;
     --cz-danger-rgb: 243, 71, 112;
     --cz-light-rgb: 255, 255, 255;
     --cz-dark-rgb: 45, 34, 36;
