--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -4751,7 +4751,7 @@ textarea.form-control-lg {
 
 #shop-categories .accordion-header {
     margin-bottom: 0;
-    border-bottom: 1px dashed #768dbc;
+    border-bottom: 1px dashed #d8ac63;
     padding: 5px 0;
 }
 
