--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -3109,7 +3109,7 @@ textarea.form-control-lg {
     color: var(--cz-btn-disabled-color);
     pointer-events: none;
     background-color: var(--cz-btn-disabled-bg);
-    border-color: #373f50;
+    border-color: #b59e78;
     opacity: var(--cz-btn-disabled-opacity);
     box-shadow: none;
 }
