--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -164,9 +164,9 @@ ul.spec{max-width:500px}
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     margin-top: 0;
     margin-bottom: 0.75rem;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 1.2;
-    color: #3d2c25;
+    color: #000;
 }
 
 h1, .h1 {
