--- a/public/css/dashmix.css
+++ b/public/css/dashmix.css
@@ -4401,6 +4401,45 @@ a.badge-light:focus, a.badge-light.focus {
   box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
 }
 
+
+.badge-purple {
+    color: #fff;
+    background-color: #6003ff;
+}
+a.badge-purple:hover, a.badge-purple:focus {
+    color: #fff;
+    background-color: #6003ff;
+}
+
+
+.badge-pink {
+    color: #fff;
+    background-color: #c600ff;
+}
+a.badge-pink:hover, a.badge-pink:focus {
+    color: #fff;
+    background-color: #c600ff;
+}
+
+.badge-green {
+    color: #fff;
+    background-color: #8cff00;
+}
+a.badge-green:hover, a.badge-green:focus {
+    color: #fff;
+    background-color: #8cff00;
+}
+
+
+.badge-yellow {
+    color: #fff;
+    background-color: #ffea00;
+}
+a.badge-yellow:hover, a.badge-yellow:focus {
+    color: #fff;
+    background-color: #ffea00;
+}
+
 .badge-dark {
   color: #fff;
   background-color: #343a40;
